fix layout for sign-up, delete modifier title-primary--left

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -11,14 +11,13 @@
 <body>
   <!-- sign up start  -->
   <div class="sign-up">
-    <div class="container sign-up">
-      <p class="sign-up__text">Sign up and get 20% off to your first order. <a class="sign-up__link"
+    <div class="sign-up__item">
+      <p class="sign-up__desc">Sign up and get 20% off to your first order. <a class="sign-up__advertise"
           href="javascript:void(0)">Sign Up
           Now</a></p>
-      <a href="javascript:void(0)"><img class="sign-up__icon" src="assets/images/headers/off.svg" alt="off"></a>
+      <a href="javascript:void(0)"><img class="sign-up__off" src="assets/images/headers/off.svg" alt="off"></a>
     </div>
   </div>
-
   <!-- sign up end  -->
 
   <!-- header start  -->
@@ -258,8 +257,8 @@
     <!-- comment start  -->
     <section class="comment">
       <div class="comment__head">
-        <h2 class="title-primary title-primary--left">OUR HAPPY CUSTOMERS</h2>
-        <div>
+        <h2 class="title-primary">OUR HAPPY CUSTOMERS</h2>
+        <div class="comment__action">
           <img src="./assets/images/comments/next-icon.svg" alt="">
           <img src="./assets/images/comments/prev-icon.svg" alt="">
         </div>
