--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -315,6 +315,73 @@
     </section>
     <!-- comment end  -->
   </div>
+
+  <!-- footer start  -->
+  <footer>
+    <fieldset class="footer">
+      <legend class="footer__contact">
+        <h2 class="title footer__contact-desc">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
+        <form class="footer__contact-box" action="">
+          <input class="btn footer__contact-form" type="text" name="email" placeholder="Enter your email address">
+          <button class="btn__contact">Subscribe to Newsletter</button>
+        </form>
+      </legend>
+      <div class="footer__action container">
+        <div class="footer__item">
+          <h2><img class="footer__logo" src="./assets/images/headers/shopco.png" alt=""></h2>
+          <p class="footer__item-desc">We have clothes that suits your style and which you’re proud to wear. From women to
+            men.</p>
+          <div class="footer__social">
+            <img class="footer__icon" src="./assets/images/footers/twitter.png" alt="">
+            <img class="footer__icon" src="./assets/images/footers/fb.png" alt="">
+            <img class="footer__icon" src="./assets/images/footers/intagram.png" alt="">
+            <img class="footer__icon" src="./assets/images/footers/github.png" alt="">
+          </div>
+        </div>
+        <div class="footer__list">
+          <ul class="footer__item">
+            <h3 class="footer__item-head">Company</h3>
+            <li><a class="link-primary" href="javascript:void(0)">About</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Features</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Works</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Career</a></li>
+          </ul>
+          <ul class="footer__item">
+            <h3 class="footer__item-head">Help</h3>
+            <li><a class="link-primary" href="javascript:void(0)">Customer Support</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Delivery Details</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Terms & Conditions</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Privacy Policy</a></li>
+          </ul>
+          <ul class="footer__item">
+            <h3 class="footer__item-head">FAQ</h3>
+            <li><a class="link-primary" href="javascript:void(0)">Account</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Manage Deliveries</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Orders</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Payments</a></li>
+          </ul>
+          <ul class="footer__item">
+            <h3 class="footer__item-head">Resources</h3>
+            <li><a class="link-primary" href="javascript:void(0)">Free eBooks</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Development Tutoria</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">How to - Blog</a></li>
+            <li><a class="link-primary" href="javascript:void(0)">Youtube Playlist</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="copyright container">
+       <p>Shop.co © 2000-2023, All Rights Reserved</p>
+        <div>
+          <img class="copyright__img" src="./assets/images/footers/visa.svg" alt="">
+          <img class="copyright__img" src="./assets/images/footers/paypal.svg" alt="">
+          <img class="copyright__img" src="./assets/images/footers/paypal.svg" alt="">
+          <img class="copyright__img" src="./assets/images/footers/ip-pay.svg" alt="">
+          <img class="copyright__img" src="./assets/images/footers/g-pay.svg" alt="">
+        </div>
+      </div>
+    </fieldset>
+  </footer>
+  <!-- footer end  -->
 </body>
 
 </html>
