fix comments for extend  btn, naming class sign-up, modifier stay alone

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -47,15 +47,16 @@
 
   <!-- banner start  -->
   <section class="banner">
-    <div class="container banner__item">
+    <div class="banner__item">
       <div class="banner__desc">
         <h2 class="title-secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
         <p class="banner__content">Browse through our diverse range of meticulously crafted garments, designed to bring
           out your individuality and cater to your sense of style.</p>
-        <button class="btn__primary">Shop Now</button>
+        <button class="btn-primary">Shop Now</button>
         <div class="banner__info">
           <p class="banner__info-num">200+<span class="banner__info-desc">International Brands</span></p>
-          <p class="banner__info-num banner--special">2,000+<span class="banner__info-desc">High-Quality Products</span>
+          <p class="banner__info-num banner__info-num--special">2,000+<span class="banner__info-desc">High-Quality
+              Products</span>
           </p>
           <p class="banner__info-num banner__info--center">30,000+<span class="banner__info-desc">Happy Customers</span>
           </p>
@@ -72,7 +73,7 @@
 
   <!-- brand start  -->
   <section class="brand">
-    <div class="container brand__item">
+    <div class="brand__item">
       <img src="./assets/images/brands/versace.png" alt="versace">
       <img src="./assets/images/brands/zara.png" alt="zara">
       <img src="./assets/images/brands/gucci.png" alt="gucci">
@@ -160,7 +161,7 @@
           </div>
         </div>
       </div>
-      <button class="btn__secondary">View All</button>
+      <button class="btn-secondary">View All</button>
     </section>
 
     <section class="product">
@@ -226,7 +227,7 @@
           </div>
         </div>
       </div>
-      <button class="btn__secondary">View All</button>
+      <button class="btn-secondary">View All</button>
     </section>
     <!-- product end -->
 
@@ -322,14 +323,15 @@
       <legend class="footer__contact">
         <h2 class="title footer__contact-desc">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
         <form class="footer__contact-box" action="">
-          <input class="btn footer__contact-form" type="text" name="email" placeholder="Enter your email address">
-          <button class="btn__contact">Subscribe to Newsletter</button>
+          <input class="footer__contact-form" type="text" name="email" placeholder="Enter your email address">
+          <button class="btn-contact">Subscribe to Newsletter</button>
         </form>
       </legend>
-      <div class="footer__action container">
+      <div class="footer__action">
         <div class="footer__item">
           <h2><img class="footer__logo" src="./assets/images/headers/shopco.png" alt=""></h2>
-          <p class="footer__item-desc">We have clothes that suits your style and which you’re proud to wear. From women to
+          <p class="footer__item-desc">We have clothes that suits your style and which you’re proud to wear. From women
+            to
             men.</p>
           <div class="footer__social">
             <img class="footer__icon" src="./assets/images/footers/twitter.png" alt="">
@@ -369,8 +371,8 @@
           </ul>
         </div>
       </div>
-      <div class="copyright container">
-       <p>Shop.co © 2000-2023, All Rights Reserved</p>
+      <div class="copyright">
+        <p>Shop.co © 2000-2023, All Rights Reserved</p>
         <div>
           <img class="copyright__img" src="./assets/images/footers/visa.svg" alt="">
           <img class="copyright__img" src="./assets/images/footers/paypal.svg" alt="">
