delete container in layout brand

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -82,7 +82,7 @@
         <img src="./assets/images/brands/calvin.png" alt="calvin">
       </div>
     </div>
-    <div class="container brand__item-desktop">
+    <div class="brand__item-desktop">
       <img class="brand__img" src="./assets/images/brands/versace-desktop.svg" alt="versace-desktop">
       <img class="brand__img" src="./assets/images/brands/zara-desktop.png" alt="zara-desktop">
       <img class="brand__img" src="./assets/images/brands/gucci-desktop.svg" alt="gucci-desktop">
