style for module card

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -59,7 +59,7 @@
           <p class="info__head info__head--special">2,000+<span class="desc">High-Quality
               Products</span>
           </p>
-          <p class="info__head info--center">30,000+<span class="desc">Happy Customers</span>
+          <p class="info__head center">30,000+<span class="desc">Happy Customers</span>
           </p>
         </div>
       </div>
@@ -91,8 +91,8 @@
   <div class="container">
     <section class="product product--center">
       <h2 class="title title-primary">new arrivals</h2>
-      <div class="product__box">
-        <div class="card card-primary">
+      <div class="card">
+        <div class="card-primary">
           <img class="card-primary__img" src="./assets/images/products/tapede-tails.png" alt="tapede-tails">
           <p class="card__name">T-Shirt with Tape Details</p>
           <div class="evaluate evaluate-primary">
@@ -107,7 +107,7 @@
             <p>&#36;120</p>
           </div>
         </div>
-        <div class="card card-primary">
+        <div class="card-primary">
           <img class="card-primary__img" src="./assets/images/products/fit-jeans.png" alt="fit-jeans">
           <p class="card__name">Skinny Fit Jeans</p>
           <div class="evaluate evaluate-primary">
@@ -123,7 +123,7 @@
             <p class="price__precent">-20%</p>
           </div>
         </div>
-        <div class="card card-primary">
+        <div class="card-primary">
           <img class="card-primary__img" src="./assets/images/products/checkered-shirt.png" alt="checkered-shirt">
           <p class="card__name">Checkered Shirt</p>
           <div class="evaluate evaluate-primary">
@@ -138,7 +138,7 @@
             <p>&#36;180</p>
           </div>
         </div>
-        <div class="card card-primary">
+        <div class="card-primary">
           <img class="card-primary__img" src="./assets/images/products/striped-t-shirt.png" alt="striped-t-shirt">
           <p class="card__name">Sleeve Striped T-Shirt</p>
           <div class="evaluate evaluate-primary">
@@ -161,8 +161,8 @@
 
     <section class="product">
       <h2 class="title title-primary">top selling</h2>
-      <div class="product__box">
-        <div class="card card-primary">
+      <div class="card">
+        <div class="card-primary">
           <img class="card-primary__img" src="./assets/images/products/veritical.png" alt="veritical">
           <p class="card__name">Vertical Striped Shirt</p>
           <div class="evaluate evaluate-primary">
@@ -179,7 +179,7 @@
             <p class="price__precent">-20%</p>
           </div>
         </div>
-        <div class="card card-primary">
+        <div class="card-primary">
           <img class="card-primary__img" src="./assets/images/products/courage.png" alt="courage">
           <p class="card__name">Courage Graphic T-Shirt</p>
           <div class="evaluate evaluate-primary">
@@ -193,7 +193,7 @@
             <p>&#36;145</p>
           </div>
         </div>
-        <div class="card card-primary">
+        <div class="card-primary">
           <img class="card-primary__img" src="./assets/images/products/loose-fit.png" alt="loose-fit">
           <p class="card__name">Loose Fit Bermuda Shorts</p>
           <div class="evaluate evaluate-primary">
@@ -206,7 +206,7 @@
             <p>&#36;80</p>
           </div>
         </div>
-        <div class="card card-primary">
+        <div class="card-primary">
           <img class="card-primary__img" src="./assets/images/products/faded-skinny.png" alt="faded-skinny">
           <p class="card__name">Faded Skinny Jeans</p>
           <div class="evaluate evaluate-primary">
@@ -260,7 +260,7 @@
         </div>
       </div>
       <div class="comment__box">
-        <div class="card card-secondary">
+        <div class="card-secondary">
           <div class="evaluate evaluate-secondary">
             <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -276,7 +276,7 @@
             From
             casual wear to elegant dresses, every piece I've bought has exceeded my expectations.”</p>
         </div>
-        <div class="card card-secondary">
+        <div class="card-secondary">
           <div class="evaluate evaluate-secondary">
             <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -292,7 +292,7 @@
             discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes and
             occasions.”</p>
         </div>
-        <div class="card card-secondary">
+        <div class="card-secondary">
           <div class="evaluate evaluate-secondary">
             <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
