change components card to block

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -92,30 +92,30 @@
     <section class="product product--center">
       <h2 class="title title-primary">new arrivals</h2>
       <div class="card">
-        <div class="card-primary">
-          <img class="card-primary__img" src="./assets/images/products/tapede-tails.png" alt="tapede-tails">
+        <div class="card__primary">
+          <img class="card__primary-img" src="./assets/images/products/tapede-tails.png" alt="tapede-tails">
           <p class="card__name">T-Shirt with Tape Details</p>
-          <div class="evaluate evaluate-primary">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-half.svg" alt="star-full">
-            <p class="evaluate-primary__num">4.5/<span class="evaluate-primary__desc">5</span></p>
+          <div class="evaluate-product">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+            <p class="evaluate-product__num">4.5/<span class="evaluate-product__desc">5</span></p>
           </div>
           <div class="price">
             <p>&#36;120</p>
           </div>
         </div>
-        <div class="card-primary">
-          <img class="card-primary__img" src="./assets/images/products/fit-jeans.png" alt="fit-jeans">
+        <div class="card__primary">
+          <img class="card__primary-img" src="./assets/images/products/fit-jeans.png" alt="fit-jeans">
           <p class="card__name">Skinny Fit Jeans</p>
-          <div class="evaluate evaluate-primary">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-half.svg" alt="star-full">
-            <p class="evaluate-primary__num">4.5/<span class="evaluate-primary__desc">5</span></p>
+          <div class="evaluate-product">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+            <p class="evaluate-product__num">3.5/<span class="evaluate-product__desc">5</span></p>
           </div>
           <div class="price">
             <p>&#36;240</p>
@@ -123,31 +123,31 @@
             <p class="price__precent">-20%</p>
           </div>
         </div>
-        <div class="card-primary">
-          <img class="card-primary__img" src="./assets/images/products/checkered-shirt.png" alt="checkered-shirt">
+        <div class="card__primary">
+          <img class="card__primary-img" src="./assets/images/products/checkered-shirt.png" alt="checkered-shirt">
           <p class="card__name">Checkered Shirt</p>
           <div class="evaluate evaluate-primary">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-half.svg" alt="star-full">
-            <p class="evaluate-primary__num">4.5/<span class="evaluate-primary__desc">5</span></p>
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+            <p class="evaluate-product__num">4.5/<span class="evaluate-product__desc">5</span></p>
           </div>
           <div class="price">
             <p>&#36;180</p>
           </div>
         </div>
-        <div class="card-primary">
-          <img class="card-primary__img" src="./assets/images/products/striped-t-shirt.png" alt="striped-t-shirt">
+        <div class="card__primary">
+          <img class="card__primary-img" src="./assets/images/products/striped-t-shirt.png" alt="striped-t-shirt">
           <p class="card__name">Sleeve Striped T-Shirt</p>
           <div class="evaluate evaluate-primary">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluatev__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-half.svg" alt="star-full">
-            <p class="evaluate-primary__num">4.5/<span class="evaluate-primary__desc">5</span></p>
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+            <p class="evaluate-product__num">4.5/<span class="evaluate-product__desc">5</span></p>
           </div>
           <div class="price">
             <p>&#36;130</p>
@@ -162,16 +162,16 @@
     <section class="product">
       <h2 class="title title-primary">top selling</h2>
       <div class="card">
-        <div class="card-primary">
-          <img class="card-primary__img" src="./assets/images/products/veritical.png" alt="veritical">
+        <div class="card__primary">
+          <img class="card__primary-img" src="./assets/images/products/veritical.png" alt="veritical">
           <p class="card__name">Vertical Striped Shirt</p>
-          <div class="evaluate evaluate-primary">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluatev__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <p class="evaluate-primary__num">5.0/<span class="evaluate-primary__desc">5</span></p>
+          <div class="evaluate-product">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <p class="evaluate-product__num">5.0/<span class="evaluate-product__desc">5</span></p>
           </div>
           <div class="price">
             <p>&#36;212</p>
@@ -179,43 +179,44 @@
             <p class="price__precent">-20%</p>
           </div>
         </div>
-        <div class="card-primary">
-          <img class="card-primary__img" src="./assets/images/products/courage.png" alt="courage">
+        <div class="card__primary">
+          <img class="card__primary-img" src="./assets/images/products/courage.png" alt="courage">
           <p class="card__name">Courage Graphic T-Shirt</p>
-          <div class="evaluate evaluate-primary">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <p class="evaluate-primary__num">4.5/<span class="evaluate-primary__desc">5</span></p>
+          <div class="evaluate-product">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <p class="evaluate-product__num">4.0/<span class="evaluate-product__desc">5</span></p>
           </div>
           <div class="price">
             <p>&#36;145</p>
           </div>
         </div>
-        <div class="card-primary">
-          <img class="card-primary__img" src="./assets/images/products/loose-fit.png" alt="loose-fit">
+        <div class="card__primary">
+          <img class="card__primary-img" src="./assets/images/products/loose-fit.png" alt="loose-fit">
           <p class="card__name">Loose Fit Bermuda Shorts</p>
-          <div class="evaluate evaluate-primary">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <p class="evaluate-primary__num">4.5/<span class="evaluate-primary__desc">5</span></p>
+          <div class="evaluate-product">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <p class="evaluate-product__num">3.0//<span class="evaluate-product__desc">5</span></p>
           </div>
           <div class="price">
             <p>&#36;80</p>
           </div>
         </div>
-        <div class="card-primary">
-          <img class="card-primary__img" src="./assets/images/products/faded-skinny.png" alt="faded-skinny">
+        <div class="card__primary">
+          <img class="card__primary-img" src="./assets/images/products/faded-skinny.png" alt="faded-skinny">
           <p class="card__name">Faded Skinny Jeans</p>
-          <div class="evaluate evaluate-primary">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-primary__img" src="./assets/images/products/star-half.svg" alt="star-full">
-            <p class="evaluate-primary__num">4.5/<span class="evaluate-primary__desc">5</span></p>
+          <div class="evaluate-product">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-product__img" src="./assets/images/products/star-half.svg" alt="star-full">
+            <p class="evaluate-product__num">4.5/<span class="evaluate-product__desc">5</span></p>
           </div>
           <div class="price">
             <p>&#36;210</p>
@@ -259,50 +260,50 @@
           <img src="./assets/images/comments/prev-icon.svg" alt="">
         </div>
       </div>
-      <div class="comment__box">
-        <div class="card-secondary">
-          <div class="evaluate evaluate-secondary">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
+      <div class="card">
+        <div class="card__secondary">
+          <div class="evaluate-comment">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
           </div>
           <div class="card__name">
             Sarah M.
-            <img class="card-secondary__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+            <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
           <p class="desc desc-primary">"I'm blown away by the quality and style of the clothes I received from Shop.co.
             From
             casual wear to elegant dresses, every piece I've bought has exceeded my expectations.”</p>
         </div>
-        <div class="card-secondary">
-          <div class="evaluate evaluate-secondary">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
+        <div class="card__secondary">
+          <div class="evaluate-comment">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
           </div>
           <div class="card__name">
             Alex K.
-            <img class="card-secondary__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+            <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
           <p class="desc desc-primary">"Finding clothes that align with my personal style used to be a challenge until I
             discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes and
             occasions.”</p>
         </div>
-        <div class="card-secondary">
-          <div class="evaluate evaluate-secondary">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="evaluate-secondary__img" src="./assets/images/products/star-full.svg" alt="star-full">
+        <div class="card__secondary">
+          <div class="evaluate-comment">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="evaluate-comment__img" src="./assets/images/products/star-full.svg" alt="star-full">
           </div>
           <div class="card__name">
             James L.
-            <img class="card-secondary__img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+            <img class="card__secondary-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
           </div>
           <p class="desc desc-primary">"As someone who's always on the lookout for unique fashion pieces, I'm thrilled
             to
