delete  / in product

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -126,7 +126,7 @@
         <div class="card__primary">
           <img class="card__primary-img" src="./assets/images/products/checkered-shirt.png" alt="checkered-shirt">
           <p class="card__name">Checkered Shirt</p>
-          <div class="evaluate evaluate-primary">
+          <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -201,7 +201,7 @@
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <p class="evaluate-product__num">3.0//<span class="evaluate-product__desc">5</span></p>
+            <p class="evaluate-product__num">3.0/<span class="evaluate-product__desc">5</span></p>
           </div>
           <div class="price">
             <p>&#36;80</p>
