rename class banner__desc, banner box

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -47,8 +47,8 @@
 
   <!-- banner start  -->
   <section class="banner">
-    <div class="banner__box">
-      <div class="banner__desc">
+    <div class="banner__wrapper">
+      <div class="banner__content">
         <h2 class="title title-secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
         <p class="desc desc-primary">Browse through our diverse range of meticulously crafted garments, designed to
           bring
@@ -63,7 +63,10 @@
           </p>
         </div>
       </div>
-      <img class="banner__img" src="./assets/images/banners/bg-banner.png" alt="bg-banner">
+      <div class="banner__img">
+          <img class="banner__img-left" src="./assets/images/banners/star.png" alt="">
+          <img class="banner__img-right" src="./assets/images/banners/start-right.png" alt="">
+      </div>
     </div>
   </section>
   <!-- banner end  -->
@@ -141,7 +144,7 @@
         <div class="card__primary">
           <img class="card__primary-img" src="./assets/images/products/striped-t-shirt.png" alt="striped-t-shirt">
           <p class="card__name">Sleeve Striped T-Shirt</p>
-          <div class="evaluate evaluate-primary">
+          <div class="evaluate-product">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="evaluate-product__img" src="./assets/images/products/star-full.svg" alt="star-full">
