rename class __item to wrapper

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -73,7 +73,7 @@
 
   <!-- brand start  -->
   <section class="brand">
-    <div class="brand__box container">
+    <div class="brand__wrapper container">
       <img class="brand__img" src="./assets/images/brands/versace.png" alt="versace">
       <img class="brand__img" src="./assets/images/brands/zara.png" alt="zara">
       <img class="brand__img" src="./assets/images/brands/gucci.png" alt="gucci">
@@ -233,7 +233,7 @@
     <!-- browse start  -->
     <section class="browse">
       <h2 class="title title-primary title-primary--center">BROWSE BY dress STYLE</h2>
-      <div class="browse__item">
+      <div class="browse__wrapper">
         <div>
           <p class="browse__desc">Causal</p>
           <img class="browse__img" src="./assets/images/browses/casual.png" alt="">
