fix layout banner

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -47,25 +47,32 @@
 
   <!-- banner start  -->
   <section class="banner">
-    <div class="banner__wrapper">
+    <div class="banner__wrapper container">
       <div class="banner__content">
-        <h2 class="title title-secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
-        <p class="desc desc-primary">Browse through our diverse range of meticulously crafted garments, designed to
+        <h2 class="title title--secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
+        <p class="desc desc--primary">Browse through our diverse range of meticulously crafted garments, designed to
           bring
           out your individuality and cater to your sense of style.</p>
-        <button class="btn btn-primary">Shop Now</button>
-        <div class="info">
-          <p class="info__head">200+<span class="desc">International Brands</span></p>
-          <p class="info__head info__head--special">2,000+<span class="desc">High-Quality
-              Products</span>
-          </p>
-          <p class="info__head center">30,000+<span class="desc">Happy Customers</span>
-          </p>
-        </div>
+        <button class="btn btn--primary">Shop Now</button>
+        <ul class="info">
+          <li>
+            <p class="info__head">200+</p>
+            <p class="desc">International Brands</p>
+          </li>
+          <li class="info__line">
+            <p class="info__head">2,000+</p>
+            <p class="desc">High-Quality
+              Products</p>
+          </li>
+          <li class="info__center">
+            <p class="info__head">30,000+</p>
+            <p class="desc">Happy Customers</p>
+          </li>
+        </ul>
       </div>
       <div class="banner__img">
-          <img class="banner__img-left" src="./assets/images/banners/star.png" alt="">
-          <img class="banner__img-right" src="./assets/images/banners/start-right.png" alt="">
+        <img class="banner__img-left" src="./assets/images/banners/star.png" alt="">
+        <img class="banner__img-right" src="./assets/images/banners/start-right.png" alt="">
       </div>
     </div>
   </section>
