--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -47,13 +47,13 @@
 
   <!-- banner start  -->
   <section class="banner">
-    <div class="banner__wrapper container">
+    <div class="banner__wrapper">
       <div class="banner__content">
         <h2 class="title title--secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
         <p class="desc desc--primary">Browse through our diverse range of meticulously crafted garments, designed to
           bring
           out your individuality and cater to your sense of style.</p>
-        <button class="btn btn--primary">Shop Now</button>
+        <button class="banner__btn btn btn--primary">Shop Now</button>
         <ul class="info">
           <li>
             <p class="info__head">200+</p>
