add max to banner desc

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -50,7 +50,7 @@
     <div class="banner__wrapper">
       <div class="banner__content">
         <h2 class="title title--secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
-        <p class="desc desc--primary">Browse through our diverse range of meticulously crafted garments, designed to
+        <p class="banner__desc desc desc--primary">Browse through our diverse range of meticulously crafted garments, designed to
           bring
           out your individuality and cater to your sense of style.</p>
         <button class="banner__btn btn btn--primary">Shop Now</button>
