fix title for section product and browse

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -49,7 +49,7 @@
   <section class="banner">
     <div class="banner__wrapper">
       <div class="banner__content">
-        <h2 class="title title--secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
+        <h2 class="banner__title title title--secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
         <p class="banner__desc desc desc--primary">Browse through our diverse range of meticulously crafted garments, designed to
           bring
           out your individuality and cater to your sense of style.</p>
@@ -100,7 +100,7 @@
   <!-- arrival start  -->
   <div class="container">
     <section class="product product--center">
-      <h2 class="title title-primary">new arrivals</h2>
+      <h2 class="title title--primary">new arrivals</h2>
       <div class="card">
         <div class="card__primary">
           <img class="card__primary-img" src="./assets/images/products/tapede-tails.png" alt="tapede-tails">
@@ -170,7 +170,7 @@
     </section>
 
     <section class="product">
-      <h2 class="title title-primary">top selling</h2>
+      <h2 class="title title--primary">top selling</h2>
       <div class="card">
         <div class="card__primary">
           <img class="card__primary-img" src="./assets/images/products/veritical.png" alt="veritical">
@@ -239,7 +239,7 @@
 
     <!-- browse start  -->
     <section class="browse">
-      <h2 class="title title-primary title-primary--center">BROWSE BY dress STYLE</h2>
+      <h2 class="browse__title title title--primary">BROWSE BY dress STYLE</h2>
       <div class="browse__wrapper">
         <div>
           <p class="browse__desc">Causal</p>
@@ -264,7 +264,7 @@
     <!-- comment start  -->
     <section class="comment">
       <div class="comment__head">
-        <h2 class="title title-primary">OUR HAPPY CUSTOMERS</h2>
+        <h2 class="title title--primary">OUR HAPPY CUSTOMERS</h2>
         <div class="comment__action">
           <img src="./assets/images/comments/next-icon.svg" alt="">
           <img src="./assets/images/comments/prev-icon.svg" alt="">
